[package]
name = "elegance"
version = "0.1.0"
edition = "2021"
description = "A pretty-printing library for Rust with a focus on speed and compactness."
license = "Apache-2.0"
repository = "https://github.com/Wybxc/elegance"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
indoc = "2.0.5"
serde_json = "1.0.121"

[[bench]]
name = "json"
harness = false
